# $Id$

2006-12-03	Konstantin V. Arkhipov

	* core/OSQL/: join's support extracted from SelectQuery, so now
	UpdateQuery can handle joins too.

2006-12-02	Konstantin V. Arkhipov

	* core/Base/Date.class.php: extracted from Timestamp.

	* meta/types/DateType.class.php: Timestamp-based pseudo Date type.

2006-12-01	Konstantin V. Arkhipov

	* main/SPL/bundled/: Serializable interface added.

2006-11-30	Konstantin V. Arkhipov

	* core/Base/Enumeration.class.php: only 'id' and 'name' are stored
	upon serialization by default.

2006-11-15	Konstantin V. Arkhipov

	* doc/project.skel/: moved to new layout, invented by Antony.

2006-11-10	Konstantin V. Arkhipov

	* meta/: return type-hints are now generated for every class.

2006-11-09	Konstantin V. Arkhipov

	* main/Utils/RussianTextUtils.class.php: dropped unused getAsText().

	* core/OSQL/SelectQuery.class.php: dropped deprecated joinQuery().

	* meta/: now suggests DB-changes by diff'ing current and generated
	schemas.

	* meta/types/: float type corrected, double type added.

	* meta/: colored embellishments.

2006-11-06	Konstantin V. Arkhipov

	* main/Mail/MimePart.class.php: strange typo in quoted encoding fixed.

	* main/Mail/Mail.class.php: fixed from-address encoding's handling.

	* meta/builders/BaseBuilder.class.php: fixed generation of
	non-required Ranges.

2006-11-04	Konstantin V. Arkhipov

	* ext/src/core/DB/Dialect.c: synced with php-version.

	* core/Logic/Expression.class.php: toValueString(), toFieldString()
	moved to Dialect, as suggested by Antony; toFormValue moved to Form.

2006-11-04	Anton E. Lebedevich

	* core/Logic/: backward incompatible reorganization: LogicalBlock
	merged with LogicalChain; LogicalExpression splitted to
	UnaryExpression, BinaryExpression, EqualsLowerExpression,
	InExpression; SIMILAR and NOT_SIMILAR removed from logical toBoolean()
	because they are not soundex(); getters dropped from LogicalObjects;
	unions moved to QueryCombination and QueryChain.
