@@ -2,6 +2,9 @@
 
 2006-12-03	Konstantin V. Arkhipov
 
+	* core/Criteria/: long awaited ObjectQuery's AI-alternative
+	introduced.
+
 	* core/OSQL/: join's support extracted from SelectQuery, so now
 	UpdateQuery can handle joins too.
 
